@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
-Date: 07. 16. 2021
+Date: 2021-07-10
 
   Major Features:
     - Added support functions for ERM_RedArmy 0.1.0 beta release.
@@ -11,6 +11,8 @@ Date: 07. 16. 2021
 
   Changes:
     - Added 64 tiles no one's land for 2 way split. This will only apply to newly generated chunk or new map
+    - All GUI buttons required admin role.
+    - Various code optimizations
 
   Bugfixes:
     - Attempt to fix run away high level units during the map processing. Some players are seeing immortal (high level) units.
